--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 
 <body>
     <div align="center">
-        <input type="image" id="muffin" src="simpleMuffin.png" onclick="makeAMuffin()" height="100" width="100">
+        <input type="image" id="muffin" src="img/simpleMuffin.png" onclick="makeAMuffin()" height="100" width="100">
         <p id="muffinInstructions">Click a muffin, make a muffin</p>
         <p id="muffinCount"></p>
         <div id="cottontailRabbit">
-            <input type="image" id="cottontailRabbitImg" src="simpleCottontail.png" onclick="cottontailRabbit()" height="200" width="200"></button>
+            <input type="image" id="cottontailRabbitImg" src="img/simpleCottontail.png" onclick="cottontailRabbit()"
+                height="200" width="200"></button>
             <p id="cottontailRabbitText">Convince a cottontail bunny to join you: 5 muffins</p>
         </div>
-        <script type="text/javascript" src="index.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
     </div>
 </body>
 
